--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event-page",
+  "name": "my-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,17 +18,16 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "node-angular-http-client": "^1.1.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "node-angular-http-client": "^1.1.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
-    "angular-cli-ghpages": "^1.0.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
